--- a/index.css
+++ b/index.css
@@ -13,24 +13,25 @@
   #main-container {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     width: 1000px;
     margin: 30px auto;
     padding: 0;
   }
   #flag-container {
-    height: 252px;
+    height: 250px;
+    width: 400px;
     background-color: #fff;
     border: 1px solid #333;
   }
   #flag-container img {
-    display: block;
+    
     width: 100%;
     height: 100%;
   }
   #info-container select {
-    display: block;
     margin: 20px auto;
-    padding: 5px;
+    padding: 4px;
     min-width: 100%;
     color: #333;
     font-size: 15px;
@@ -60,5 +61,6 @@
   .gmap_canvas_class {
     overflow:hidden;
     background:none!important;
-    height:500px;width:600px;
+    height:500px;
+    width:600px;
   }
